@@ -86,6 +86,8 @@ double rgamma(double a, double scale)
 
     double e, p, q, r, t, u, v, w, x, ret_val;
 
+    if (ISNAN(a) || ISNAN(scale))
+        ML_ERR_return_NAN;
     if (a <= 0.0 || scale <= 0.0)
     {
         if (scale == 0. || a == 0.)
