@@ -46,7 +46,7 @@
 
 double rnbinom(double size, double prob)
 {
-    if (!R_FINITE(prob) || size <= 0 || prob <= 0 || prob > 1)
+    if (!R_FINITE(prob) || ISNAN(size) || size <= 0 || prob <= 0 || prob > 1)
         /* prob = 1 is ok, PR#1218 */
         ML_ERR_return_NAN;
     if (!R_FINITE(size))
@@ -56,7 +56,7 @@ double rnbinom(double size, double prob)
 
 double rnbinom_mu(double size, double mu)
 {
-    if (!R_FINITE(mu) || size <= 0 || mu < 0)
+    if (!R_FINITE(mu) || ISNAN(size) || size <= 0 || mu < 0)
         ML_ERR_return_NAN;
     if (!R_FINITE(size))
         size = DBL_MAX / 2.;
